# alcotest-github-action

./: .ocamlformat  Dockerfile  README.md  action.yml  dune-project  entrypoint.sh
lib/: File.ml  Test_headline.ml  Test_report.ml  dune
test/: dune
